# videobrowser_neurips

./: README.md  pyproject.toml  requirements.txt
experiments/experience_retrieval/: __init__.py  build_memory_v2b_metadata.py
experiments/jit_paradigm/: builder.py  builder_ablation_full_context.py  builder_visual_stage1.py  evaluate_multiprocess.py  training_data.py
scripts/: build_hard_negatives.py  build_offline_pool.py
videobrowser/: config.py
videobrowser/core/: state.py
videobrowser/graph/: builder.py
videobrowser/hard_negatives/: prefilter.py  prompts.py  select.py  storage.py  types.py
videobrowser/memory/: __init__.py  bandit.py  bootstrap.py  critic.py  embedder.py  index.py  injection.py  logging.py  neural_ucb.py  retriever.py  reward.py  schemas.py  scorer.py  serializer.py  skill_bank.py  skill_injection.py  skill_schema.py  store.py  translation_filter.py  translation_index.py  translation_retriever.py  translation_schemas.py  uncertainty.py
videobrowser/nodes/: analyst.py  checker.py  planner.py  searcher.py  selector.py  watcher.py
videobrowser/prompts/: analyst_report.j2  checker_evaluate.j2  distill_skill.j2  memory_critic.j2  memory_from_evidence.j2  memory_from_evidence_v1.j2  memory_v2b_metadata_distill.j2  memory_v2c_translation_distill.j2  memory_v2c_zq_extract.j2  planner.j2  reflection_analyst.j2  reflection_planner.j2  reflection_watcher.j2  selector_filter.j2  selector_verify.j2  watcher_extract.j2  watcher_vision.j2
videobrowser/search_engine/: __init__.py  base.py  bm25.py  build_index.py  cli.py  embedding.py  engine.py  (+5 more)
(+14 files in other folders)
