[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "videobrowser"
version = "0.1.0"
description = "My Video Browser Project"
requires-python = ">=3.10"
dependencies = [
    "langgraph",
    "numpy",
    "pydantic",
    "pyyaml",
    "jinja2",
    "sentence-transformers",
    "rank_bm25",
]

[tool.setuptools.packages.find]
where = ["."]  
include = ["videobrowser*"]
